--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    api("org.assertj:assertj-core:3.+")
 }
 
 compileKotlin {
