Add implementation dependency on zjsonpatch 0+
This is an implementation of RFC 6902 JSON Patch written in Java.

See:

https://github.com/flipkart-incubator/zjsonpatch

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     api("org.assertj:assertj-core:3.+")
+    implementation("com.flipkart.zjsonpatch:zjsonpatch:0.+")
 }
 
 compileKotlin {
