--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     api("org.assertj:assertj-core:3.+")
     implementation("com.flipkart.zjsonpatch:zjsonpatch:0.+")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
 }
 
 compileKotlin {
@@ -21,4 +22,11 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+tasks.test {
+    useJUnitPlatform()
+    testLogging {
+        events("passed", "skipped", "failed")
+    }
 }
