--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     api("org.assertj:assertj-core:3.+")
     implementation("com.flipkart.zjsonpatch:zjsonpatch:0.+")
+    testImplementation("org.assertj:assertj-core:3.13.2")
     testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
 }
 
