--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'maven-publish'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
 
@@ -6,16 +7,29 @@ group 'xyz.gamblor'
 version '1.2.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    api("org.assertj:assertj-core:3.+")
-    implementation("com.flipkart.zjsonpatch:zjsonpatch:0.+")
-    testImplementation("org.assertj:assertj-core:3.13.2")
+    api("org.assertj:assertj-core:3.15.0")
+    implementation("com.flipkart.zjsonpatch:zjsonpatch:0.4.9")
+    testImplementation("org.assertj:assertj-core:3.15.0")
     testImplementation("org.junit.jupiter:junit-jupiter:5.5.2")
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId 'assertjson'
+            from components.java
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
 }
 
 compileKotlin {
